--- a/app/assets/stylesheets/_core/_rows.sass
+++ b/app/assets/stylesheets/_core/_rows.sass
@@ -76,6 +76,10 @@
   min-width: 1000px
   margin-bottom: 40px
   padding: 0 20px
+  .ie7 &
+    // Make sure that top nav dropdowns always stay on top
+    z-index: 2
+    position: relative
 
 
 // ----------------------------------------------------------------------------
